<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_add_shopping_cart_black"
            android:title="@string/navigation_sales" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/navigation_history" />

        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_package_variant"
            android:title="@string/navigation_products" />

        <item
            android:id="@+id/nav_customer"
            android:icon="@drawable/ic_action_account_box"
            android:title="@string/navigation_customers" />
    </group>

    <item android:title="@string/navigation_sub_items">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/navigation_settings" />

            <item
                android:id="@+id/nav_synchronization"
                android:icon="@drawable/ic_sync_black"
                android:title="@string/navigation_synchronization" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/navigation_logout" />

</menu>
