<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/setting_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/setting_fab"
        android:orientation="vertical"
        android:padding="@dimen/narrow_offset">

        <TextView
            android:id="@+id/customername"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_customer_name" />

        <TextView
            android:id="@+id/customeraddress"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/customerpostal"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/postal_label" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   /   " />

            <TextView
                android:id="@+id/cashorcredit"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash_or_credit_message" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
